projects/vb6parse/snapshots/tests/statements/objects/events/raiseevent_statement_at_module_level.snap
---
source: projects/vb6parse/tests/statements/objects/events.rs
assertion_line: 524
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: RaiseEventStatement
      children:
        - kind: RaiseEventKeyword
          text: RaiseEvent
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: GlobalEvent
        - kind: Newline
          text: "\n"
