projects/vb6parse/snapshots/tests/statements/objects/events/raiseevent_statement_conditional_inline.snap
---
source: projects/vb6parse/tests/statements/objects/events.rs
assertion_line: 426
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: IfStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: IfKeyword
                  text: If
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: ready
                - kind: Whitespace
                  text: " "
                - kind: ThenKeyword
                  text: Then
                - kind: Whitespace
                  text: " "
                - kind: RaiseEventStatement
                  children:
                    - kind: RaiseEventKeyword
                      text: RaiseEvent
                    - kind: Whitespace
                      text: " "
                    - kind: Identifier
                      text: Ready
                    - kind: Whitespace
                      text: " "
                    - kind: ElseKeyword
                      text: Else
                    - kind: Whitespace
                      text: " "
                    - kind: RaiseEventKeyword
                      text: RaiseEvent
                    - kind: Whitespace
                      text: " "
                    - kind: Identifier
                      text: NotReady
                    - kind: Newline
                      text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
